# lapol

./: .eslintrc.json  .gitignore  .gitmodules  Cargo.toml  Readme.md  architecture.md  build.md  build.py  default_style.md  jest.config.js  modules.md  package.json  readme.md  tsconfig.eslint.json  tsconfig.json  vscode.md
.github/workflows/: node.js.yml
deps-lapol/: lapol-default.css
deps-lapol-default/: lapol_default.sty  lapol_default_article.cls
lapol-core/: .eslintrc.json  .gitignore  .npmignore  .prettierrc  architecture.md  build.md  modules.md  package-lock.json  package.json  readme.md  tsconfig.eslint.json  tsconfig.json
lapol-core/src/: dbg.ts  main.ts  mod.ts  runner.ts
lapol-core/src/internal/: ast.ts  det.ts  (+12 more)
lapol-core/test/: sample_global_test.test.ts
lapol-parse-rs/: Cargo.toml
lapol-parse-rs/src/: ast.rs  bin.rs  parse.rs
lapol-parse-rs/src/parse/: identifier.rs
lapol-rs/: .gitignore  Cargo.toml  build.md
lapol-rs/src/: bin.rs  panic_hook.rs  parse.rs
lapol-rs/wasm-pack-stuff/: LICENSE_MIT  about_this_folder.md
samples/: .gitignore  Readme.md  simple page.js
samples/js and ts/: simple page.lap  typescript example.lap  typescript example.ts
samples/node-lib1/: package-lock.json  package.json  tsconfig.json
samples/simple/: hello.lap  hello.ts  lorem.lap  lorem.ts
src/: ast.rs  ast.ts  bin.rs  command.ts  compile.ts  det.ts  det_utils.ts  error.rs  errors.ts  front_pass.ts  la_utils.ts  lib.rs  main.test.ts  main.ts  mod.ts  mod_utils.ts  parse.rs  reader.ts  runner.ts
src/command/: command.ts  function_to_command.ts
src/default_commands/: testing_commands.ts
src/default_lapol_modules/: main.ts
src/evaluate/: environment.ts  evaluate.ts
src/internal/: ast.ts  compile.ts  context.ts  det.ts  errors.ts  expr_meta.ts  global_init.ts  identifier.ts  internal_context.ts  la_path.ts  lapol_compiler.ts  namespace.ts  run.ts  utils.ts
src/la_module/: mod_utils.ts  module.ts
src/output/: html.ts  output.ts
src/parse/: ast.rs  ast_meta_utils.rs  identifier.rs  matching.rs  parse.ts  parser.rs  string.rs  tokenizer.rs
src/process/: paragraph.ts  process.ts
src/std/: core.ts  main.ts  main_html_output.ts  main_latex_output.ts  test.ts
tests/: sample.rs
(+90 files in other folders)
