[package]
name = "lapol-rs"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lapol-rs-bin"
path = "src/bin.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"


[profile.release]
# Tell `rustc` to optimize for small code size = "s"
# For performace = 3 (w/o quotes)
opt-level = "s"
# Include debuginfo (useful for profiling)
debug = true

# To have debug info we use '-g'
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '-g']