[package]
name = "lapol-parse-rs"
version = "0.0.1"
authors = ["<not@configured.mail>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "lapol-parse-rs-bin"
path = "src/bin.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "1.0"
nom = { version = "6.1.2", features = ["alloc"] }
nom_locate = "3.0.1"
serde = { version = "1.0", features = ["derive"] }

[profile.release]

opt-level = 3
debug = true
# Makes a non-negligible difference in performance (like probably ~20%)
lto="fat"